# lisp-build-system

./: .clang-format  .gitignore  .lbs  CMakeLists.txt  IDEA.org  README.org  TODO.org
inc/cnote/: build_scenario.h  compiler.h  target.h
inc/lbs/: build_scenario.h  compiler.h  target.h
inc/parser/: parser.h
inc/tests/: tests.h
inc/tocmake/: tocmake.h
lib/parser/: parser.cpp
lib/tests/: tests.cpp
lib/tocmake/: tocmake.cpp
src/: main.cpp
